--- a/tasks.org
+++ b/tasks.org
@@ -4,35 +4,39 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+FILETAGS: :@task:
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2017-01-17 周二 23:46]
-| Headline                                | Time       |         |
-|-----------------------------------------+------------+---------|
-| *Total time*                            | *1d 13:03* |         |
-|-----------------------------------------+------------+---------|
-| BOOK                                    | 1d 13:03   |         |
-| \_  TODO [#A] Unity 权威讲解            |            |    0:17 |
-| \_  TODO [#B] 游戏编程算法与技巧[7%]    |            |    1:03 |
-| \_  TODO [#B] Mathematics of 3D Game... |            |    0:54 |
-| \_  TODO [#B] Game Coding Complete[50%] |            | 1d 7:57 |
-| \_  TODO [#B] GEA[0%]                   |            |    0:27 |
-| \_  TODO [#C] 程序员的自我修养          |            |    0:04 |
-| \_  TODO [#C] Game Programming Patterns |            |    0:59 |
-| \_  TODO [#C] Windows 程序设计          |            |    1:22 |
+#+CAPTION: Clock summary at [2017-02-01 周三 22:12]
+| Headline                                   | Time       |          |
+|--------------------------------------------+------------+----------|
+| *Total time*                               | *3d 15:41* |          |
+|--------------------------------------------+------------+----------|
+| BOOK                                       | 3d 11:58   |          |
+| \_  TODO [#A] CPPP[63%]                    |            | 1d 13:24 |
+| \_  TODO [#A] OpenGL Programming Guide[8%] |            |     2:56 |
+| \_  TODO [#A] Unity 权威讲解[33%]          |            |     6:52 |
+| \_  TODO [#B] 游戏编程算法与技巧[7%]       |            |     1:03 |
+| \_  TODO [#B] Mathematics of 3D Game...    |            |     0:54 |
+| \_  TODO [#B] Game Coding Complete[50%]    |            |  1d 7:57 |
+| \_  TODO [#B] GEA[0%]                      |            |     0:27 |
+| \_  TODO [#C] 程序员的自我修养             |            |     0:04 |
+| \_  TODO [#C] Game Programming Patterns    |            |     0:59 |
+| \_  TODO [#C] Windows 程序设计             |            |     1:22 |
+| Things                                     | 3:43       |          |
+| \_  TODO learn 1openGL                     |            |     3:43 |
 #+END:
 * BOOK                                                               :@book:
-** TODO [#A] CPPP[10%]
+** TODO [#A] CPPP[63%]
    - [X] 开始
    - [X] 变量和基本类型
-   - [ ] 字符串，向量和数组
-   - [ ] 表达式
-   - [ ] 语句
-   - [ ] 函数
-   - [ ] 类
-   - [ ] IO 库
-   - [ ] 顺序容器
-   - [ ] 泛型算法
-   - [ ] 关联容器
-   - [ ] 动态内存
+   - [X] 字符串，向量和数组
+   - [X] 表达式
+   - [X] 语句
+   - [X] 函数
+   - [X] 类
+   - [X] IO 库
+   - [X] 顺序容器
+   - [X] 泛型算法
+   - [X] 关联容器
+   - [X] 动态内存
    - [ ] 拷贝控制
    - [ ] 重载运算与类型转换
    - [ ] 面向对象程序设计
@@ -41,6 +45,53 @@
    - [ ] 用于大型程序的工具
    - [ ] 特殊工具与技术
    :LOGBOOK:
+   CLOCK: [2017-02-01 周三 20:56]--[2017-02-01 周三 22:11] =>  1:15
+   CLOCK: [2017-02-01 周三 19:45]--[2017-02-01 周三 20:33] =>  0:48
+   CLOCK: [2017-02-01 周三 17:07]--[2017-02-01 周三 17:58] =>  0:51
+   CLOCK: [2017-02-01 周三 16:06]--[2017-02-01 周三 16:55] =>  0:49
+   CLOCK: [2017-02-01 周三 00:20]--[2017-02-01 周三 00:49] =>  0:29
+   CLOCK: [2017-01-31 周二 23:46]--[2017-02-01 周三 00:05] =>  0:19
+   CLOCK: [2017-01-31 周二 23:00]--[2017-01-31 周二 23:36] =>  0:36
+   CLOCK: [2017-01-31 周二 22:12]--[2017-01-31 周二 22:51] =>  0:39
+   CLOCK: [2017-01-31 周二 21:12]--[2017-01-31 周二 21:55] =>  0:43
+   CLOCK: [2017-01-31 周二 19:28]--[2017-01-31 周二 20:17] =>  0:49
+   CLOCK: [2017-01-31 周二 19:07]--[2017-01-31 周二 19:26] =>  0:19
+   CLOCK: [2017-01-31 周二 17:50]--[2017-01-31 周二 17:57] =>  0:07
+   CLOCK: [2017-01-31 周二 16:46]--[2017-01-31 周二 17:40] =>  0:54
+   CLOCK: [2017-01-31 周二 16:34]--[2017-01-31 周二 16:43] =>  0:09
+   CLOCK: [2017-01-30 周一 16:12]--[2017-01-30 周一 17:18] =>  1:06
+   CLOCK: [2017-01-30 周一 15:00]--[2017-01-30 周一 15:40] =>  0:40
+   CLOCK: [2017-01-30 周一 12:30]--[2017-01-30 周一 14:59] =>  2:29
+   CLOCK: [2017-01-29 周日 23:40]--[2017-01-29 周日 23:54] =>  0:14
+   CLOCK: [2017-01-29 周日 22:45]--[2017-01-29 周日 23:33] =>  0:48
+   CLOCK: [2017-01-29 周日 21:15]--[2017-01-29 周日 22:40] =>  1:25
+   CLOCK: [2017-01-29 周日 19:39]--[2017-01-29 周日 20:25] =>  0:46
+   CLOCK: [2017-01-29 周日 19:08]--[2017-01-29 周日 19:27] =>  0:19
+   CLOCK: [2017-01-29 周日 18:41]--[2017-01-29 周日 18:53] =>  0:12
+   CLOCK: [2017-01-28 周六 21:03]--[2017-01-28 周六 22:28] =>  1:25
+   CLOCK: [2017-01-28 周六 18:15]--[2017-01-28 周六 19:06] =>  0:51
+   CLOCK: [2017-01-28 周六 16:52]--[2017-01-28 周六 18:08] =>  1:16
+   CLOCK: [2017-01-26 周四 16:16]--[2017-01-26 周四 16:56] =>  0:40
+   CLOCK: [2017-01-21 周六 16:12]--[2017-01-21 周六 17:12] =>  1:00
+   CLOCK: [2017-01-21 周六 14:36]--[2017-01-21 周六 14:53] =>  0:17
+   CLOCK: [2017-01-21 周六 12:47]--[2017-01-21 周六 13:41] =>  0:54
+   CLOCK: [2017-01-21 周六 11:44]--[2017-01-21 周六 12:41] =>  0:57
+   CLOCK: [2017-01-21 周六 10:38]--[2017-01-21 周六 11:22] =>  0:44
+   CLOCK: [2017-01-20 周五 15:47]--[2017-01-20 周五 17:15] =>  1:28
+   CLOCK: [2017-01-20 周五 14:45]--[2017-01-20 周五 15:40] =>  0:55
+   CLOCK: [2017-01-20 周五 13:56]--[2017-01-20 周五 14:35] =>  0:39
+   CLOCK: [2017-01-20 周五 11:48]--[2017-01-20 周五 12:15] =>  0:27
+   CLOCK: [2017-01-20 周五 10:37]--[2017-01-20 周五 11:39] =>  1:02
+   CLOCK: [2017-01-19 周四 22:58]--[2017-01-19 周四 23:20] =>  0:22
+   CLOCK: [2017-01-19 周四 22:10]--[2017-01-19 周四 22:53] =>  0:43
+   CLOCK: [2017-01-19 周四 21:36]--[2017-01-19 周四 22:02] =>  0:26
+   CLOCK: [2017-01-19 周四 21:18]--[2017-01-19 周四 21:30] =>  0:12
+   CLOCK: [2017-01-19 周四 20:07]--[2017-01-19 周四 21:01] =>  0:54
+   CLOCK: [2017-01-19 周四 19:19]--[2017-01-19 周四 19:58] =>  0:39
+   CLOCK: [2017-01-19 周四 17:02]--[2017-01-19 周四 17:45] =>  0:43
+   CLOCK: [2017-01-19 周四 14:35]--[2017-01-19 周四 14:40] =>  0:05
+   CLOCK: [2017-01-19 周四 14:20]--[2017-01-19 周四 14:34] =>  0:14
+   CLOCK: [2017-01-19 周四 12:44]--[2017-01-19 周四 13:05] =>  0:21
    CLOCK: [2017-01-19 四 04:38]--[2017-01-19 四 05:12] =>  0:34
    CLOCK: [2017-01-19 四 03:56]--[2017-01-19 四 04:24] =>  0:28
    CLOCK: [2017-01-19 四 01:45]--[2017-01-19 四 02:17] =>  0:32
@@ -51,14 +102,88 @@
    CLOCK: [2017-01-18 三 22:33]--[2017-01-18 三 23:12] =>  0:39
    :END:
 ** TODO [#A] CLRS
-** TODO [#A] OpenGL Programming Guide 8th Ed
-** TODO [#A] Unity 权威讲解
+** TODO [#A] OpenGL Programming Guide[8%]
+   - [X] Introduction to OpenGL
+   - [ ] Shader Fundamentals
+   - [ ] Drawing with OpenGL
+   - [ ] Color,Pixels,and Framework
+   - [ ] Viewing Transformations,Clipping,and FeedBack
+   - [ ] Texture
+   - [ ] Light and Shadow
+   - [ ] Procedural Texturing
+   - [ ] Tessellation Shaders
+   - [ ] Geometry Shaders
+   - [ ] Memory
+   - [ ] Compute Shaders
+  :LOGBOOK:
+  CLOCK: [2017-01-21 周六 23:34]--[2017-01-21 周六 23:58] =>  0:24
+  CLOCK: [2017-01-21 周六 22:52]--[2017-01-21 周六 23:24] =>  0:32
+  CLOCK: [2017-01-20 周五 23:38]--[2017-01-21 周六 00:05] =>  0:27
+   CLOCK: [2017-01-20 周五 22:45]--[2017-01-20 周五 23:31] =>  0:46
+   CLOCK: [2017-01-18 周三 21:42]--[2017-01-18 周三 22:29] =>  0:47
+  :END:
+** TODO [#A] Unity 权威讲解[33%]
+   - [X] Unity 5 简介
+   - [X] 准备游戏开发
+   - [X] 制作游戏场景
+   - [X] 制作主人公角色
+   - [X] 制作子弹发射效果
+   - [ ] 制作敌对角色
+   - [ ] Unity UI
+   - [ ] 游戏管理器
+   - [ ] 灵活运用射线透射
+   - [ ] 导航仪高级技巧
+   - [ ] 光照贴图，灯光探测器
+   - [ ] 场景分离与合并
+   - [ ] Unity 内置网络游戏
+   - [ ] 使用 Photon Cloud 制作网络游戏
+   - [ ] 提升游戏真实感
    :LOGBOOK:
+   CLOCK: [2017-01-21 周六 20:20]--[2017-01-21 周六 22:39] =>  2:19
+   CLOCK: [2017-01-21 周六 18:32]--[2017-01-21 周六 19:00] =>  0:28
+   CLOCK: [2017-01-20 周五 21:35]--[2017-01-20 周五 21:58] =>  0:23
+   CLOCK: [2017-01-20 周五 20:24]--[2017-01-20 周五 21:27] =>  1:03
+   CLOCK: [2017-01-20 周五 19:42]--[2017-01-20 周五 20:13] =>  0:31
+   CLOCK: [2017-01-19 周四 23:41]--[2017-01-20 周五 00:05] =>  0:24
    CLOCK: [2017-01-18 周三 11:35]--[2017-01-18 周三 12:11] =>  0:36
    CLOCK: [2017-01-18 周三 10:29]--[2017-01-18 周三 11:20] =>  0:51
    CLOCK: [2017-01-17 周二 23:29]--[2017-01-17 周二 23:46] =>  0:17
    :END:
 ** TODO [#A] 程序员修炼之道
+** TODO [#A] 数据库系统概念[3%]
+   - [X] 引言
+   - [ ] 关系模型介绍
+   - [ ] SQL
+   - [ ] 中级 SQL
+   - [ ] 高级 SQL
+   - [ ] 形式化关系查询语言
+   - [ ] 数据库设计和 E-R 模型
+   - [ ] 关系数据库设计
+   - [ ] 应用设计和开发
+   - [ ] 存储和文件结构
+   - [ ] 索引与散列
+   - [ ] 查询处理
+   - [ ] 查询优化
+   - [ ] 事务
+   - [ ] 并发控制
+   - [ ] 恢复系统
+   - [ ] 数据库系统体系结构
+   - [ ] 并行数据库
+   - [ ] 分布式数据库
+   - [ ] 数据仓库与数据挖掘
+   - [ ] 信息检索
+   - [ ] 基于对象的数据库
+   - [ ] XML
+   - [ ] 高级应用开发
+   - [ ] 时空数据和移动性
+   - [ ] 高级事务处理
+   - [ ] PostgreSQL
+   - [ ] Oracle
+   - [ ] IBＭ　DB2
+   - [ ] SQL Server
+   :LOGBOOK:
+   CLOCK: [2017-02-01 周三 22:26]--[2017-02-01 周三 23:06] =>  0:40
+   :END:
 ** TODO [#B] 游戏编程算法与技巧[7%]
    - [X] 游戏编程概述
    - [ ] 2D 图形
@@ -232,8 +357,14 @@
 * Homework
 * Things
 ** TODO Blog
-** TODO 复习数据库
-   DEADLINE: <2017-02-19 周日>
+** TODO learn 1openGL 
+   :LOGBOOK:
+   CLOCK: [2017-02-01 周三 15:34]--[2017-02-01 周三 15:56] =>  0:22
+   CLOCK: [2017-02-01 周三 14:17]--[2017-02-01 周三 14:42] =>  0:25
+   CLOCK: [2017-01-31 周二 14:08]--[2017-01-31 周二 14:17] =>  0:09
+   CLOCK: [2017-01-31 周二 12:14]--[2017-01-31 周二 14:02] =>  1:48
+   CLOCK: [2017-01-31 周二 11:06]--[2017-01-31 周二 12:05] =>  0:59
+   :END:
 * Daily                                                             :@daily:
 ** TODO 练习双拼和英文打字
 
